added hod access and views

--- a/views/institute-dashboard.ejs
+++ b/views/institute-dashboard.ejs
@@ -23,8 +23,10 @@
             <h3>Department Forum</h3>
             <br>
             <input type="text" name="name" id="" placeholder="Enter Department Name" required>
-            <input type="text" name="head" id="" placeholder="Enter Department Head" required>
-            <button type="submit">Add Department</button>
+            <input type="text" name="head" id="" placeholder="Enter Department Head Name" required>
+            <input type="email" name="email" id="" placeholder="Email of HOD" required>
+            <input type="password" name="password" id="" placeholder="Enter Password" required>
+            <button type="submit">Add Department and Register HOD</button>
         </form>
     </div>
 
