--- a/views/view-divisions.ejs
+++ b/views/view-divisions.ejs
@@ -24,19 +24,19 @@
   </table>
 
   <!-- Form to Add New Division -->
-  <h3>Add New Division</h3>
+  <!-- <h3>Add New Division</h3>
   <form action="/years/<%= year._id %>/divisions/add" method="POST">
     <label for="divisionName"><%= `${year.year} - Division Name:` %></label>
     <input type="text" name="divisionName" style="width: 500px;" value="<%= `${year.year} - ` %>" required >
     <button type="submit">Add</button>
-  </form>
+  </form> -->
 
   <br><br><hr><br><br>
 
   <h2>Subjects</h2>
 
   <!-- Form to Add New Subject -->
-  <h3>Add New Subject</h3>
+  <!-- <h3>Add New Subject</h3>
 <form action="/years/<%= year._id %>/subjects/add" method="POST" style="border: 1px solid black; padding: 20px;">
     <input type="text" name="code" placeholder="Subject Code" required>
     <input type="text" name="name" placeholder="Subject Name" required>
@@ -50,7 +50,7 @@
     </select>
 
     <button type="submit">Add Subject</button>
-</form>
+</form> -->
 
 
   <br><br>
